Implemented retrying failed item XML downloads

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ab4e02b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "267bdc3a",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c4b6cb0d",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "88bd2882",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ebf023d",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape itemXML\n",
+    "# Scrape item XML setup\n",
     "item_xml_dir = Path(output_dir + \"/itemxml\")\n",
     "item_xml_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
@@ -187,24 +187,55 @@
     "        rsp = requests.get(item_xml_info['url'])\n",
     "        rsp.raise_for_status()\n",
     "        item_xml_info['filepath'].write_bytes(rsp.content)\n",
-    "    return item_xml_info\n",
-    "\n",
-    "download_item_xml_results = []\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
-    "    futures = [executor.submit(download_item_xml, u, False)\n",
-    "               for u in item_urls['url']]\n",
-    "    for future in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Item XML\", total=len(futures), leave=False):\n",
-    "        try:\n",
-    "            fres = future.result()\n",
-    "        except:\n",
-    "            print(\"download_item_xml failed!\")\n",
-    "        else:\n",
-    "            download_item_xml_results.append(fres)\n"
+    "    return item_xml_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "491692ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                              \r"
+     ]
+    }
+   ],
+   "source": [
+    "# Scrape item XML download\n",
+    "download_item_xml_results = []\n",
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
+    "    fail_count = -1\n",
+    "    while fail_count != 0:\n",
+    "        fail_count = 0\n",
+    "        futures = [executor.submit(download_item_xml, u, False)\n",
+    "                   for u in item_urls['url']]\n",
+    "\n",
+    "        for future in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Item XML\", total=len(futures), leave=False):\n",
+    "            try:\n",
+    "                fres = future.result()\n",
+    "            except:\n",
+    "                fail_count += 1\n",
+    "            else:\n",
+    "                download_item_xml_results.append(fres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c94d3bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO Scrape item XML parsing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "bf8804a8",
    "metadata": {},
    "outputs": [],
