parsing item xml now works

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1ab4e02b",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,13 @@
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "import time\n",
-    "import requests\n"
+    "import requests\n",
+    "import xml.etree.ElementTree as ET\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "267bdc3a",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c4b6cb0d",
    "metadata": {},
    "outputs": [],
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "88bd2882",
    "metadata": {},
    "outputs": [],
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1ebf023d",
    "metadata": {},
    "outputs": [],
@@ -192,50 +193,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "491692ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                              \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scrape item XML download\n",
-    "download_item_xml_results = []\n",
+    "item_xml_paths = {}\n",
     "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
     "    fail_count = -1\n",
     "    while fail_count != 0:\n",
     "        fail_count = 0\n",
-    "        futures = [executor.submit(download_item_xml, u, False)\n",
-    "                   for u in item_urls['url']]\n",
-    "\n",
+    "        futures = [executor.submit(download_item_xml, u, False) for u in item_urls['url']]\n",
     "        for future in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Item XML\", total=len(futures), leave=False):\n",
     "            try:\n",
     "                fres = future.result()\n",
     "            except:\n",
     "                fail_count += 1\n",
     "            else:\n",
-    "                download_item_xml_results.append(fres)"
+    "                item_xml_paths[str(fres['filepath'])] = 1\n",
+    "item_xml_paths = pd.DataFrame([k for k in item_xml_paths.keys()])[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c94d3bda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO Scrape item XML parsing"
+    "# TODO parsing item XML\n",
+    "json_dir = Path(output_dir + \"/itemjson\")\n",
+    "json_dir.mkdir(parents=True, exist_ok=True)\n",
+    "jsonequip_dir = Path(output_dir + \"/jsonequip\")\n",
+    "jsonequip_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "def parse_item_xml(path, write_json=False):\n",
+    "    root = ET.parse(path).find(\".//item\")\n",
+    "    class_elem = root.find(\"class\")\n",
+    "    subclass_elem = root.find(\"subclass\")\n",
+    "    quality_elem = root.find(\"quality\")\n",
+    "    icon_elem = root.find(\"icon\")\n",
+    "    inventorySlot_elem = root.find(\"inventorySlot\")\n",
+    "    parsedItem = {\n",
+    "        \"id\": int(root.attrib['id']),\n",
+    "        \"name\": root.findtext(\"name\"),\n",
+    "        \"level\": int(root.findtext(\"level\")),\n",
+    "        \"quality_id\": int(quality_elem.attrib['id']),\n",
+    "        \"quality_name\": quality_elem.text,\n",
+    "        \"class_id\": int(class_elem.attrib['id']),\n",
+    "        \"class_name\": class_elem.text,\n",
+    "        \"subclass_id\": int(subclass_elem.attrib['id']),\n",
+    "        \"subclass_name\": subclass_elem.text,\n",
+    "        \"icon_displayId\": int(icon_elem.attrib['displayId']),\n",
+    "        \"icon_name\": icon_elem.text,\n",
+    "        \"inventorySlot_id\": int(inventorySlot_elem.attrib['id']),\n",
+    "        \"inventorySlot_name\": inventorySlot_elem.text,\n",
+    "        \"htmlTooltip\": root.findtext(\"htmlTooltip\"),\n",
+    "        \"link\": root.findtext(\"link\")\n",
+    "    }\n",
+    "    if(write_json):\n",
+    "        json_str = root.findtext(\"json\")\n",
+    "        if (json_str):\n",
+    "            json_filepath = json_dir.joinpath(\"{}.json\".format(parsedItem['id']))\n",
+    "            json_filepath.write_text('{' + json_str + '}')\n",
+    "\n",
+    "        jsonequip_str = root.findtext(\"jsonEquip\")\n",
+    "        if (jsonequip_str):\n",
+    "            jsonequip_filepath = jsonequip_dir.joinpath(\n",
+    "                \"{}.json\".format(parsedItem['id']))\n",
+    "            jsonequip_filepath.write_text('{' + jsonequip_str + '}')\n",
+    "\n",
+    "    return parsedItem\n",
+    "\n",
+    "\n",
+    "fail_count = 0\n",
+    "parsed_item_xml = []\n",
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
+    "    futures = [executor.submit(parse_item_xml, p) for p in item_xml_paths]\n",
+    "    for future in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Parsing Item XML\", total=len(futures), leave=False):\n",
+    "        try:\n",
+    "            fres = future.result()\n",
+    "        except:\n",
+    "            fail_count += 1\n",
+    "        else:\n",
+    "            parsed_item_xml.append(fres)\n",
+    "items = pd.DataFrame.from_records(parsed_item_xml, index='id')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bf8804a8",
    "metadata": {},
    "outputs": [],
