--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -222,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO parsing item XML\n",
+    "# parsing item XML\n",
     "json_dir = Path(output_dir + \"/itemjson\")\n",
     "json_dir.mkdir(parents=True, exist_ok=True)\n",
     "jsonequip_dir = Path(output_dir + \"/jsonequip\")\n",
