--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1ab4e02b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "267bdc3a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c4b6cb0d",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "88bd2882",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ebf023d",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "26760d3c",
    "metadata": {},
    "outputs": [],
@@ -193,10 +193,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "491692ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                              \r"
+     ]
+    }
+   ],
    "source": [
     "# Scrape item XML download\n",
     "item_xml_paths = {}\n",
@@ -217,10 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c94d3bda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                         \r"
+     ]
+    }
+   ],
    "source": [
     "# parsing item XML\n",
     "json_dir = Path(output_dir + \"/itemjson\")\n",
@@ -261,8 +277,7 @@
     "\n",
     "        jsonequip_str = root.findtext(\"jsonEquip\")\n",
     "        if (jsonequip_str):\n",
-    "            jsonequip_filepath = jsonequip_dir.joinpath(\n",
-    "                \"{}.json\".format(parsedItem['id']))\n",
+    "            jsonequip_filepath = jsonequip_dir.joinpath(\"{}.json\".format(parsedItem['id']))\n",
     "            jsonequip_filepath.write_text('{' + jsonequip_str + '}')\n",
     "\n",
     "    return parsedItem\n",
@@ -285,6 +300,223 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72984af4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jsonequips = []\n",
+    "jsonequips_files = [fp for fp in jsonequip_dir.iterdir()]\n",
+    "for fp in tqdm(iterable=jsonequips_files, desc=\"Parsing item jsonequips\", leave=False):\n",
+    "    try:\n",
+    "        df = pd.read_json(fp)\n",
+    "    except:\n",
+    "        continue\n",
+    "    else:\n",
+    "        item_id = int(Path(fp.stem).stem)\n",
+    "        df[\"item_id\"] = item_id\n",
+    "        df.drop(columns={'appearances','displayid'}, inplace=True)\n",
+    "        jsonequips.append(df)\n",
+    "jsonequips = pd.concat(jsonequips)\n",
+    "jsonequips.drop(columns={'appearances','displayid'}, inplace=True)\n",
+    "jsonequips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "c881b4ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(28.75)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = jsonequips[jsonequips['item_id'] == 19564]\n",
+    "temp['dps'][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e73b5b0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subclass</th>\n",
+       "      <th>name</th>\n",
+       "      <th>level</th>\n",
+       "      <th>quality</th>\n",
+       "      <th>dps</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12797</th>\n",
+       "      <td>One-Handed Swords</td>\n",
+       "      <td>Frostguard</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1207</th>\n",
+       "      <td>One-Handed Maces</td>\n",
+       "      <td>Murphstar</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Uncommon</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12260</th>\n",
+       "      <td>Daggers</td>\n",
+       "      <td>Searing Golden Blade</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Uncommon</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12528</th>\n",
+       "      <td>Two-Handed Maces</td>\n",
+       "      <td>The Judge's Gavel</td>\n",
+       "      <td>52</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12794</th>\n",
+       "      <td>One-Handed Maces</td>\n",
+       "      <td>Masterwork Stormhammer</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9639</th>\n",
+       "      <td>One-Handed Maces</td>\n",
+       "      <td>The Hand of Antu'sul</td>\n",
+       "      <td>48</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9683</th>\n",
+       "      <td>Staves</td>\n",
+       "      <td>Strength of the Treant</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9686</th>\n",
+       "      <td>One-Handed Maces</td>\n",
+       "      <td>Spirit of the Faerie Dragon</td>\n",
+       "      <td>51</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9718</th>\n",
+       "      <td>One-Handed Swords</td>\n",
+       "      <td>Reforged Blade of Heroes</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Rare</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>One-Handed Swords</td>\n",
+       "      <td>Fire Sword of Crippling</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Common</td>\n",
+       "      <td>28.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4506 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                subclass                         name  level   quality    dps\n",
+       "id                                                                           \n",
+       "12797  One-Handed Swords                   Frostguard     63      Rare  28.75\n",
+       "1207    One-Handed Maces                    Murphstar     39  Uncommon  28.75\n",
+       "12260            Daggers         Searing Golden Blade     39  Uncommon  28.75\n",
+       "12528   Two-Handed Maces            The Judge's Gavel     52      Rare  28.75\n",
+       "12794   One-Handed Maces       Masterwork Stormhammer     63      Rare  28.75\n",
+       "...                  ...                          ...    ...       ...    ...\n",
+       "9639    One-Handed Maces         The Hand of Antu'sul     48      Rare  28.75\n",
+       "9683              Staves       Strength of the Treant     51      Rare  28.75\n",
+       "9686    One-Handed Maces  Spirit of the Faerie Dragon     51      Rare  28.75\n",
+       "9718   One-Handed Swords     Reforged Blade of Heroes     38      Rare  28.75\n",
+       "997    One-Handed Swords      Fire Sword of Crippling      1    Common  28.75\n",
+       "\n",
+       "[4506 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_weapon_dps(item_id):\n",
+    "    return jsonequips[jsonequips['item_id'] == 19564]['dps'][0]\n",
+    "    \n",
+    "\n",
+    "weapons = items[items['class_name'] == 'Weapons'][['subclass_name','name', 'level','quality_name']]\n",
+    "weapons.rename(columns={'subclass_name':'subclass', 'quality_name':'quality'}, inplace=True)\n",
+    "weapons['dps'] = weapons.apply(lambda x: get_weapon_dps(x.index), axis=1)\n",
+    "\n",
+    "weapons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "bf8804a8",
    "metadata": {},
    "outputs": [],
