made weapons graph better

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -14,12 +14,13 @@
     "- [tqdm docs](https://tqdm.github.io/)\n",
     "- [concurrent.futures docs](https://docs.python.org/dev/library/concurrent.futures.html)\n",
     "- [seaborn docs](https://seaborn.pydata.org/api.html)\n",
-    "- [chrome switches](https://stackoverflow.com/questions/38335671/where-can-i-find-a-list-of-all-available-chromeoption-arguments)"
+    "- [chrome switches](https://stackoverflow.com/questions/38335671/where-can-i-find-a-list-of-all-available-chromeoption-arguments)\n",
+    "- [mathplotlib docs](https://matplotlib.org/stable/api/index.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "1ab4e02b",
    "metadata": {},
    "outputs": [],
@@ -38,12 +39,14 @@
     "import requests\n",
     "import xml.etree.ElementTree as ET\n",
     "import seaborn as sns\n",
-    "import json\n"
+    "import json\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "267bdc3a",
    "metadata": {},
    "outputs": [],
@@ -58,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "c4b6cb0d",
    "metadata": {},
    "outputs": [],
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "88bd2882",
    "metadata": {},
    "outputs": [],
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "1ebf023d",
    "metadata": {},
    "outputs": [],
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "26760d3c",
    "metadata": {},
    "outputs": [],
@@ -194,18 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "491692ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                              \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scrape item XML download\n",
     "item_xml_paths = {}\n",
@@ -226,18 +221,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
+   "id": "c5f5137c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shutdown\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c94d3bda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                         \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# parsing item XML\n",
     "json_dir = Path(output_dir + \"/itemjson\")\n",
@@ -298,420 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "72984af4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                 \r"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>armor</th>\n",
-       "      <th>avgbuyout</th>\n",
-       "      <th>dura</th>\n",
-       "      <th>reqlevel</th>\n",
-       "      <th>sellprice</th>\n",
-       "      <th>slotbak</th>\n",
-       "      <th>maxcount</th>\n",
-       "      <th>dmgrange</th>\n",
-       "      <th>classes</th>\n",
-       "      <th>dmgmax1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>socket2</th>\n",
-       "      <th>socketbonus</th>\n",
-       "      <th>socket3</th>\n",
-       "      <th>arcsplpwr</th>\n",
-       "      <th>splcritstrkpct</th>\n",
-       "      <th>holsplpwr</th>\n",
-       "      <th>natsplpwr</th>\n",
-       "      <th>feratkpwr</th>\n",
-       "      <th>dbcFlags</th>\n",
-       "      <th>scadist</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>item_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10040</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>73985.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>1767.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1006</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10118</th>\n",
-       "      <td>313.0</td>\n",
-       "      <td>47000.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>23382.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10000</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10046</th>\n",
-       "      <td>11.0</td>\n",
-       "      <td>8347.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>54.0</td>\n",
-       "      <td>9449.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>4815.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9971</th>\n",
-       "      <td>286.0</td>\n",
-       "      <td>16088.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>6978.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9967</th>\n",
-       "      <td>239.0</td>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>5105.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>47.0</td>\n",
-       "      <td>8200.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>4833.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9972</th>\n",
-       "      <td>148.0</td>\n",
-       "      <td>6000.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>4357.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>34250 rows × 95 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         armor  avgbuyout   dura  reqlevel  sellprice  slotbak  maxcount  \\\n",
-       "item_id                                                                    \n",
-       "10040     44.0    73985.0   70.0      30.0     1767.0     20.0       NaN   \n",
-       "1006       NaN        NaN    NaN       NaN        NaN      NaN       1.0   \n",
-       "10118    313.0    47000.0  100.0      53.0    23382.0      5.0       NaN   \n",
-       "10000      NaN        NaN    NaN      40.0        NaN      NaN       1.0   \n",
-       "10046     11.0     8347.0   20.0       4.0       32.0      8.0       NaN   \n",
-       "...        ...        ...    ...       ...        ...      ...       ...   \n",
-       "9998      54.0     9449.0   70.0      36.0     4815.0      5.0       NaN   \n",
-       "9971     286.0    16088.0   70.0      40.0     6978.0      3.0       NaN   \n",
-       "9967     239.0     9000.0   40.0      40.0     5105.0     10.0       NaN   \n",
-       "9999      47.0     8200.0   55.0      36.0     4833.0      7.0       NaN   \n",
-       "9972     148.0     6000.0   40.0      40.0     4357.0      9.0       NaN   \n",
-       "\n",
-       "         dmgrange  classes  dmgmax1  ...  socket2  socketbonus  socket3  \\\n",
-       "item_id                              ...                                  \n",
-       "10040         NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "1006          NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "10118         NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "10000         NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "10046         0.2      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "...           ...      ...      ...  ...      ...          ...      ...   \n",
-       "9998          NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "9971          NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "9967          0.2      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "9999          NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "9972          NaN      NaN      NaN  ...      NaN          NaN      NaN   \n",
-       "\n",
-       "         arcsplpwr  splcritstrkpct  holsplpwr  natsplpwr  feratkpwr  dbcFlags  \\\n",
-       "item_id                                                                         \n",
-       "10040          NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "1006           NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "10118          NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "10000          NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "10046          NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "...            ...             ...        ...        ...        ...       ...   \n",
-       "9998           NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "9971           NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "9967           NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "9999           NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "9972           NaN             NaN        NaN        NaN        NaN       NaN   \n",
-       "\n",
-       "         scadist  \n",
-       "item_id           \n",
-       "10040        NaN  \n",
-       "1006         NaN  \n",
-       "10118        NaN  \n",
-       "10000        NaN  \n",
-       "10046        NaN  \n",
-       "...          ...  \n",
-       "9998         NaN  \n",
-       "9971         NaN  \n",
-       "9967         NaN  \n",
-       "9999         NaN  \n",
-       "9972         NaN  \n",
-       "\n",
-       "[34250 rows x 95 columns]"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse_jsonequip(fp):\n",
     "        with fp.open() as f:\n",
@@ -771,30 +359,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18dd329f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weapons.groupby('subclass', sort=False).plot(x='item level', y='dps', kind='scatter')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2d75a0b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "weapons_by_subclass_df = weapons.groupby('subclass').agg(list)\n",
     "weapons_by_subclass = {}\n",
-    "for subclass in weapons_by_subclass_df.index:\n",
-    "    df = pd.DataFrame({\n",
-    "        'item level': weapons_by_subclass_df['item level'][subclass],\n",
-    "        'dps': weapons_by_subclass_df['dps'][subclass],\n",
-    "        'quality_color': weapons_by_subclass_df['quality_color'][subclass],\n",
-    "    })\n",
-    "    weapons_by_subclass[subclass] = df\n",
-    "weapons.groupby('subclass', sort=False)['subclass'].count()"
+    "for subclass in weapons['subclass'].drop_duplicates().sort_values():\n",
+    "    weapons_by_subclass[subclass] = weapons[weapons['subclass'] == subclass]"
    ]
   },
   {
@@ -804,18 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(data=weapons_by_subclass['Daggers'], x='item level',y='dps', hue='quality_color', legend=None).set_title('Daggers')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf8804a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# shutdown\n",
-    "driver.close()"
+    "sns.set_theme(rc={'figure.figsize':(16,9)})\n",
+    "sns.lineplot(data=weapons_by_subclass['Daggers'], x='item level',y='dps', hue='quality_color', legend=None, sort=True).set_title('Daggers')"
    ]
   }
  ],
