pre removing selenium

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -6,9 +6,38 @@
    "metadata": {},
    "source": [
     "# Notes\n",
+    "##### All Items Have\n",
+    "- id\n",
+    "- level _(can be 0)_\n",
+    "- name\n",
+    "- icon\n",
+    "- quality\n",
+    "- class\n",
+    "- subclass\n",
+    "##### Items can have\n",
+    "- __Equipment Info__\n",
+    "  - Equip Slot\n",
+    "  - __Weapon Stats__\n",
+    "    - dmgmin\n",
+    "    - dmgmax\n",
+    "    - speed\n",
+    "    - dps _(can be meta data)_\n",
+    "  - __Attributes__\n",
+    "    - __Primary Attributes__\n",
+    "      - Strength\n",
+    "      - Agility\n",
+    "      - Intellect\n",
+    "      - Stamina\n",
+    "      - Spirit\n",
+    "      - Armor\n",
+    "    - __Secondary Attributes__\n",
+    "      - Melee/Ranged/Spell/All Critical Strike Rating\n",
+    "      - Melee/Ranged/Spell/All Hit Rating\n",
+    "      - Melee/Ranged/All Attack Power\n",
+    "      - Healing/Damage/All Spell Power \n",
+    "- Vendor Sell Price\n",
     "\n",
     "## Links\n",
-    "\n",
     "- [Extentions in Webdriver](https://www.reddit.com/r/learnpython/comments/4zzn69/how_do_i_get_adblockplus_to_work_with_selenium/)\n",
     "- [requests docs](https://requests.readthedocs.io/en/latest/)\n",
     "- [tqdm docs](https://tqdm.github.io/)\n",
@@ -41,7 +70,8 @@
     "import seaborn as sns\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl"
+    "import matplotlib as mpl\n",
+    "import os"
    ]
   },
   {
@@ -128,6 +158,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "acc9b6b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "itemlist_data_rgx1 = r'WH\\.Gatherer\\.addData\\(.*?\\)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "619a7e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_listview_data_json_js = r'return JSON.stringify(g_listviews.items.data)'\n",
+    "def process_itemlist2(url):\n",
+    "    driver.get(url)\n",
+    "    try:\n",
+    "        listview_data_json = driver.execute_script(get_listview_data_json_js)\n",
+    "    except:\n",
+    "        return []\n",
+    "    else:\n",
+    "        return json.loads(listview_data_json)\n",
+    "\n",
+    "itemlist_datas = []\n",
+    "\n",
+    "\n",
+    "for ilvl in tqdm(range(min_itemlvl, max_itemlvl), desc=\"Iterating item lists\", leave=False):\n",
+    "    u = root_url + f'/items/min-level:{ilvl}/max-level:{ilvl}'\n",
+    "    data = process_itemlist2(u)\n",
+    "    data_len = len(data)\n",
+    "    if data_len == 0:\n",
+    "        continue\n",
+    "    elif data_len < 1000:\n",
+    "        itemlist_datas += data\n",
+    "    else:\n",
+    "        for qid in item_qualities['id']:\n",
+    "            u += f'/quality:{qid}'\n",
+    "            itemlist_datas += process_itemlist2(u)\n",
+    "\n",
+    "            \n",
+    "\n",
+    "# for u in tqdm(itemlist_urls, desc=\"Iterating item lists for item urls\", leave=False):\n",
+    "#     itemlist_data = process_itemlist2(u)\n",
+    "\n",
+    "#     itemlist_datas.append()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ebf023d",
    "metadata": {},
    "outputs": [],
@@ -139,6 +220,7 @@
     "    driver.get(url)\n",
     "    frames = []\n",
     "    pre_url = \"\"\n",
+    "    # TODO check and ensure that less < 1000 items where returned by query\n",
     "    while driver.current_url != pre_url:\n",
     "        item_links = driver.execute_script(get_item_links_js)\n",
     "        frames.append(pd.DataFrame(item_links))\n",
@@ -326,6 +408,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b388550",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO Convert jsonequips to long format\n",
+    "temp3 = \"abc\"\n",
+    "print(f'{temp3=}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e73b5b0e",
    "metadata": {},
    "outputs": [],
@@ -396,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
