--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -214,7 +214,7 @@
     "    while len(unprocessed) > 0:\n",
     "        urls = [u for u in unprocessed.keys()]\n",
     "        futures = {executor.submit(process_itemlist, u):u for u in urls}\n",
-    "        for f in tqdm(iterable=concurrent.futures.as_completed(futures),desc=\"Handling itemlist data futures\", leave=False, total=len(futures)):\n",
+    "        for f in tqdm(iterable=concurrent.futures.as_completed(futures),desc=\"Downloading itemlist data\", leave=False, total=len(futures)):\n",
     "            u = futures[f]\n",
     "            u_is_qualitylink = u.find(r'/quality:') >= 0\n",
     "            try:\n",
@@ -233,7 +233,7 @@
     "                    print(f\"Even filtering on quality did not bring item count below 1000 for url {u}\")\n",
     "                    itemlist_datas += data\n",
     "                else:\n",
-    "                    for qid in item_qualities['id']:\n",
+    "                    for qid in item_qualities.index:\n",
     "                        qu = f\"{u}/quality:{qid}\"\n",
     "                        unprocessed[qu] = None\n",
     "                        fail_count[qu] = 0\n",
@@ -245,35 +245,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "491692ab",
+   "id": "73ff1e4a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape item XML download\n",
     "item_xml_dir = Path(output_dir + \"/itemxml\")\n",
     "item_xml_dir.mkdir(parents=True, exist_ok=True)\n",
-    "def download_item_xml(item_id, overwrite=False):\n",
-    "    url = f\"{root_url}/item={item_id}&xml\"\n",
-    "    filepath = item_xml_dir.joinpath(f\"{item_id}.xml\").absolute()\n",
-    "    if (not filepath.exists() or overwrite):\n",
-    "        rsp = requests.get(url)\n",
-    "        rsp.raise_for_status()\n",
-    "        filepath.write_bytes(rsp.content)\n",
-    "    return filepath\n",
-    "\n",
     "item_xml_paths = []\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
-    "    fail_count = -1\n",
-    "    while fail_count != 0:\n",
-    "        fail_count = 0\n",
-    "        futures = [executor.submit(download_item_xml, item_id, False) for item_id in itemlist_datas['item_id']]\n",
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    missing_item_xml_urls = {}\n",
+    "    for item_id in itemlist_datas['item_id']:\n",
+    "        filepath = item_xml_dir.joinpath(f\"{item_id}.xml\").absolute()\n",
+    "        if not filepath.exists():\n",
+    "            missing_item_xml_urls[f\"{root_url}/item={item_id}&xml\"] = filepath\n",
+    "        else:\n",
+    "            item_xml_paths.append(filepath)\n",
+    "    \n",
+    "    while len(missing_item_xml_urls) > 0:\n",
+    "        futures = {}\n",
+    "        for url in tqdm(iterable=missing_item_xml_urls.keys(), desc=\"Starting download item XML futures\", leave=False, total=len(missing_item_xml_urls)):\n",
+    "            futures[executor.submit(requests.get, url)] = url\n",
+    "\n",
     "        for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Downloading Item XML\", total=len(futures), leave=False):\n",
+    "            url = futures[f]\n",
+    "            filepath = missing_item_xml_urls[url]\n",
     "            try:\n",
-    "                fres = f.result()\n",
+    "                rsp = f.result()\n",
+    "                rsp.raise_for_status()\n",
     "            except:\n",
-    "                fail_count += 1\n",
+    "                pass\n",
     "            else:\n",
-    "                item_xml_paths.append(fres)\n"
+    "                filepath.write_bytes(rsp.content)\n",
+    "                item_xml_paths.append(filepath)\n",
+    "                missing_item_xml_urls.pop(url, None)\n",
+    "\n",
+    "item_xml_paths = pd.Series(item_xml_paths)\n",
+    "item_xml_paths"
    ]
   },
   {
@@ -328,7 +335,7 @@
     "\n",
     "fail_count = 0\n",
     "parsed_item_xml = []\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    futures = [executor.submit(parse_item_xml, p) for p in item_xml_paths]\n",
     "    for f in tqdm(iterable=concurrent.futures.as_completed(futures), desc=\"Parsing Item XML\", total=len(futures), leave=False):\n",
     "        try:\n",
@@ -355,7 +362,7 @@
     "\n",
     "jsonequips = []\n",
     "\n",
-    "with concurrent.futures.ThreadPoolExecutor(max_workers=(os.cpu_count() - 1)) as executor:\n",
+    "with concurrent.futures.ThreadPoolExecutor() as executor:\n",
     "    futures = []\n",
     "    for fp in tqdm(iterable=jsonequip_dir.iterdir(), desc=\"Starting jsonequip parse futures\", leave=False):\n",
     "        futures.append(executor.submit(parse_jsonequip, fp))\n",
